# flakes

./: README.md  flake.nix  packages.nix
just/: common.just
k3s/: pyproject.toml
k3s/k3s/: __init__.py  cli.py  ensure_incus.py  ensure_kubeconfig.py  incus.py  lib.py  tailscale.py  terraform.py  utils.py  validate_tailscale.py
scripts/: prefrio.sh
